# claude_spawner

./: .env.example  .gitignore  CLAUDE.md  CLIENT_REFACTOR_TODO.md  EXEC_PROFILES_DESIGN.md  No Beep Beep.m4a  README.md  TODO.md  Three Beep Beeps.m4a  brian_notes  docker-compose.broker.yml  docker-compose.dev.yml  docker-compose.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
deploy/: README.md  claude-log.sh  profiles.example.json  rebuild-broker.sh  rebuild-container.sh  rebuild.sh  spawner-broker.env.example  spawner-broker.service  spawner-container.env.example  spawner-container.yml  spawner-rebuild.sudoers  spawner-server.env.example  spawner-server.service  spawner.env.example  spawner.service
docs/: architecture.md  commands.json  commands.md  protocol.md  web-client.md
sandbox/: Containerfile  README.md
server/: .dockerignore  Dockerfile  Dockerfile.broker  Dockerfile.broker.dockerignore  go.mod  main.go
server/cmd/broker/: main.go
server/cmd/gencommands/: main.go
server/cmd/wsclient/: main.go
server/internal/agent/: agent.go  agent_test.go  antigravity.go  claude.go  codex.go  opencode.go  opencode_models_test.go  parse_test.go  settings.go  settings_lww_test.go  settings_test.go  turn.go
server/internal/tmux/: tmux.go
wakeword/: Dockerfile.trainer  README.md
wakeword/configs/: beep.yaml  bump.yaml
wakeword/service/: Cargo.toml  Dockerfile
wakeword/service/src/: main.rs
whisper/: Dockerfile  Dockerfile.cuda  Dockerfile.vulkan  README.md
(+242 files in other folders)
