[package]
name = "spawner-wakeword"
version = "0.1.0"
edition = "2021"
description = "HTTP sidecar wrapping the LiveKit livekit-wakeword Rust runtime for claude_spawner"

[dependencies]
livekit-wakeword = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
