[package]
name = "spawner-wakeword"
version = "0.1.0"
edition = "2021"
description = "HTTP sidecar wrapping the LiveKit livekit-wakeword Rust runtime for claude_spawner"

[dependencies]
# Vendored (Apache-2.0) under vendor/ and patched with a public `predict_peak` that computes the
# embeddings once per clip and slides only the classifier — see vendor/livekit-wakeword/src/wakeword.rs.
livekit-wakeword = { path = "vendor/livekit-wakeword" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
